--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "material-ui": "^0.19.0",
+    "material-ui-icons": "^1.0.0-beta.5",
     "prop-types": "^15.5.7-alpha.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
@@ -43,6 +44,7 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^0.1.0",
     "style-loader": "^0.18.2",
+    "typeface-roboto": "0.0.35",
     "url-loader": "^0.5.9",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.10.2",
