--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^4.0.4",
     "material-ui": "^0.19.0",
     "material-ui-icons": "^1.0.0-beta.5",
+    "node-sass": "^4.5.3",
     "prop-types": "^15.5.7-alpha.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
@@ -43,6 +44,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^0.1.0",
+    "sass": "^1.0.0-beta.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "typeface-roboto": "0.0.35",
     "url-loader": "^0.5.9",
