--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redux-thunk": "^0.1.0",
     "sass": "^1.0.0-beta.2",
     "sass-loader": "^6.0.6",
+    "socket.io-client": "^2.0.3",
     "style-loader": "^0.18.2",
     "typeface-roboto": "0.0.35",
     "url-loader": "^0.5.9",
