--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bower-webpack-plugin": "^0.1.9",
+    "chalk": "^2.3.0",
+    "compression-webpack-plugin": "^1.1.3",
     "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.30.1",
     "immutable": "^3.8.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
@@ -44,6 +48,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^0.1.0",
+    "rimraf": "^2.6.2",
     "sass": "^1.0.0-beta.2",
     "sass-loader": "^6.0.6",
     "socket.io-client": "^2.0.3",
@@ -58,6 +63,7 @@
     "babel-plugin-react-transform": "^1.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "copy-webpack-plugin": "^4.3.1",
     "expect": "^1.6.0",
     "express": "^4.13.3",
     "jsdom": "^5.6.1",
